--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 Django==3.1.5
 django-filter==2.4.0
 django-simple-history==2.12.0
+djangorestframework==3.12.2
 gunicorn==20.0.4
 pytz==2020.5
 six==1.15.0
